# 3d-model-web-viewer

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile.server  Dockerfile.worker  README.md  README_DEPLOY_ELITEDESK.md
apps/converter/: README.md  package-lock.json  package.json
apps/converter/src/: cli.js  convertStepToGlb.js  materialRules.js  readStepWorker.js  smokeTest.js  stats.js  validateGlb.js
apps/server/: README.md  package-lock.json  package.json
apps/server/public/: admin.html  admin.js  index.html  model.html  model.js  styles.css
apps/server/scripts/: accounts-migrate-auth-db.mjs  accounts-migrate-auth-db.test.mjs  accounts-preflight.mjs  accounts-preflight.test.mjs  assign-models-to-default-org.mjs  assign-models-to-default-org.test.mjs
apps/server/src/: assetLibrary.test.ts  chunkedUpload.test.ts  db.ts  featureFlags.ts  largeStepChunkingSummary.test.ts  meshiq.ts  meshiqUpload.test.ts  publicPages.test.ts  publicPages.ts  publicRoutes.test.ts  publicShares.test.ts  publicShares.ts  quality.test.ts  quality.ts  revisionControllers.test.ts  revisions.test.ts  server.ts  storage.ts  workerPayload.test.ts  workerPayload.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: api.test.ts  api.ts  index.css  main.tsx  qr.ts  theme.ts  types.ts  utils.ts
apps/worker/: README.md  package-lock.json  package.json
apps/worker/scripts/: benchmark-dxf.ts  check-dxf-private-samples.ts  convert-dxf-fixture.ts  convert-step-fixture.ts  inspect-dxf.ts
apps/worker/src/: adaptiveChunking.test.ts  chunking.test.ts  client.ts  config.test.ts  config.ts  converterProcessor.ts  dxf.test.ts  fakeProcessor.ts  glbOptimizer.test.ts  glbOptimizer.ts  glbValidation.ts  gltf-validator.d.ts  mergeGlbs.test.ts  (+6 more)
config/: material-rules.json
deploy/: docker-compose.elitedesk.yml  docker-compose.postgres.yml
docs/: accounts-enable-runbook.md  accounts-phase1.md  converter-xcaf-glb-prototype.md  converter-xcaf-spike.md  formatiq-dxf-fixture-policy.md  formatiq-dxf-mesh-import-plan.md  glb-optimization-plan.md  meshiq-adaptive-tessellation-plan.md  mobile-viewer-performance-and-compression-spike.md  modelbase-viewable-v1-audit-and-plan.md  object-name-extraction-investigation.md  public-qr-share-links.md  remote-access-cloudflare.md  revvault-phase6-qa-checklist.md  revvault-revisions-implementation-plan.md  revvault-rollout-runbook.md  step-colour-test1-vs-test2.md  step-presentation-hierarchy-investigation.md  step-style-colour-investigation.md  viewer-performance-comparison.md
scripts/: backup-elitedesk.sh  deploy-elitedesk.sh  deploy-elitedesk.test.mjs  logs-elitedesk.sh  restart-elitedesk.sh
spikes/: merge_runner.js
spikes/formatiq-dxf-spike/: .gitignore  README.md  package.json
spikes/occt-xcaf-colour/: CMakeLists.txt  Dockerfile  README.md  run.sh
spikes/occt-xcaf-colour/src/: main.cpp
spikes/occt-xcaf-glb/: CMakeLists.txt  Dockerfile  README.md  benchmark_u826.py  compare_reports.py  compare_simple_assembly.py  extract_chunks.py  filter_chunks.py  run.sh  verify_name_regression.py
spikes/occt-xcaf-glb/src/: extract.cpp  main.cpp  planner.cpp
spikes/step-style-inspector/: README.md  step_style_inspector.py
(+92 files in other folders)
